# onepower

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  COF_c_z0.txt  COF_c_z0_2.txt  COF_s_z0.txt  COF_s_z0_2.txt  CONTRIBUTORS.rst  INSTALLATION.rst  LICENSE.rst  Notes on code.txt  README.md  README.rst  add_and_upsample.py  add_red_and_blue_power_spectra.py  bnl_interface.py  bnl_interface_cosmopower.py  bnl_interface_delete.py  bnl_interface_delete.yml  cf_lib.py  combine_cl.py  correct_cosmo_observable.py  darkmatter_lib.py  extrapolate_obs.py  extrapolate_power_spectra.py  halo_mass.txt  halo_mass_2.txt  halo_model_ingredients.py  halo_model_ingredients_halomod.py  halo_model_ingredients_halomod.yaml  halo_model_utility.py  hmf_and_hbf.py  hmf_and_hbf_and_concentration.py  hmf_and_hbf_tinker.py  hod_interface.py  hod_interface.yaml  hod_interface_old.py  (+38 more)
.doctrees/: changelog.doctree  installation.doctree  license.doctree
.doctrees/_autosummary/: onepower.pk.doctree
.doctrees/examples/: cosmosis_interface.doctree  showcase.doctree
.github/: dependabot.yml
.github/workflows/: automerge-dependabot.yml  documentation.yml  documentation2.yml  publish-to-pypi.yml  test_docs.yml  tests.yml
add_and_upsample/: add_and_upsample.py
benchmarks/: Integrals.ipynb  Linear_Pk.ipynb  Linear_power_spectrum.ipynb  NonLinear_Pk.ipynb  SpectraWithTrapezoid.py  benchmarking.py  defaults_dictionary.py  high_resolution_benchmark.pkl  k_high_resolution_benchmark.pkl  mass_high_resolution_benchmark.pkl  params_benchmark.py  trapezoid_high_resolution_benchmark.pkl
bnl/: bnl_interface.py  bnl_interface_class.py  bnl_util.py
cosmosis_modules/: defaults_dictionary.txt  module.yaml  onepower_interface.py
cosmosis_modules/add_and_upsample/: module.yml
cosmosis_modules/bnl/: bnl_interface.py  bnl_interface_class.py
cosmosis_modules/delta_window/: module.yaml
cosmosis_modules/example_ini_files/: pipeline.ini  values.ini
cosmosis_modules/halo_model_ingredients/: halo_model_ingredients_halomod_class_interface.py
delta_window/: delta_window.py
docs/: api.rst  conf.py  contributing.rst  developing.rst  faq.rst  index.rst  requirements.txt  tutorials.rst
example_ini_files/: simulate_bnl_testing.ini  simulate_test.ini  values_bnl_testing.ini  values_test.ini
halo_model_ingredients/: halo_model_ingredients_halomod_class.py  halo_model_ingredients_halomod_class_interface.py  halo_model_utility.py  module.yaml
hod/: hod_interface.py  hod_interface_no_loop.py  hod_lib_class.py  hod_lib_class_no_loop.py  module.yaml
ia/: ia_radial_interface_class.py  ia_radial_lib_class.py
input_files/: input_files_generation.py
legacy_input_files/: input_files_generation.py
likelihood/: mini_2pt_like.py
main/: .buildinfo  api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
modules/: pk_interface.py  read_hod_from_file.py
package/: __init__.py
pk/: module.yaml  pk_interface_class.py  pk_lib.py  pk_lib_class.py  pk_util.py
pk_to_real/: correct_cosmo_real.py  pk_to_real.py  pk_to_real_ogata.py
scale_cuts/: scale_cuts.py  twopoint.py  wrapper_twopoint.py
src/: __init__.py
tests/: .coverage  test_add.py  test_bnl.py  test_hmi.py  test_hod.py  test_ia.py  test_pk.py  test_utils_poisson.py
utils/: correlated_priors.py  mini_like.py
v0.1.0/: api.html  changelog.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.1.1/: .buildinfo  api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.2.0/: .buildinfo  api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.3.0/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.3.5/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.5.0/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.6.0/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.7.0/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.7.1/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.7.2/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
v0.8.0/: api.html  changelog.html  contributing.html  contributors.html  developing.html  faq.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  tutorials.html
(+10085 files in other folders)
